--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,13 @@ h2 {
 
 }
 span {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    font-style: italic;
 }
 
 .img {
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
 }
 
 
